# vtracer

./: .gitignore  README.md
cmdapp/: Cargo.toml
cmdapp/src/: config.rs  converter.rs  inmemory_converter.rs  lib.rs  main.rs  svg.rs
webapp/: Cargo.toml
webapp/src/conversion/: binary_image.rs  color_image.rs
