[package]
name = "vtracer"
version = "0.4.1"
authors = ["Chris Tsang <tyt2y7@gmail.com>"]
edition = "2021"
description = "A cmd app to convert images into vector graphics."
license = "MIT OR Apache-2.0"
homepage = "https://www.visioncortex.org/vtracer"
repository = "https://github.com/visioncortex/vtracer/"
categories = ["graphics"]
keywords = ["svg", "computer-graphics"]

[dependencies]
clap = "3.2.14"
image = "0.24.3"
visioncortex = "0.6.1"